Fix applied to main element to add margin-top value to make content visible under header.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
